2011-06-13  Werner Koch  <wk@g10code.com>

	* dsa.c (selftest_sign_1024): Use the raw and not the pkcs1 flag.

	* pubkey.c (gcry_pk_sign): Special case output generation for PKCS1.
	(sexp_data_to_mpi): Parse "random-override" for pkcs1 encryption.
	(pkcs1_encode_for_encryption): Add args RANDOM_OVERRIDE and
	RANDOM_OVERRIDE_LEN.
	(gcry_pk_encrypt): Special case output generation for PKCS1.
	(sexp_data_to_mpi): Use GCRYMPI_FMT_USG for raw encoding.

2011-06-10  Werner Koch  <wk@g10code.com>

	* pubkey.c (gcry_pk_sign): Use format specifier '%M' to avoid
	leading zeroes.  Special case output generation for PSS.
	(gcry_pk_encrypt): Special case output generation for OAEP.
	(sexp_data_to_mpi): Use GCRYMPI_FMT_USG for PSS verify.

2011-06-09  Werner Koch  <wk@g10code.com>

	* pubkey.c (oaep_decode): Make use of octet_string_from_mpi.
	(sexp_to_enc): Skip "random-override".

	* pubkey.c (oaep_encode, pss_encode): Add args RANDOM_OVERRIDE and
	RANDOM_OVERRIDE_LEN.
	(sexp_data_to_mpi): Extract new random-override parameter.

	* pubkey.c (pss_encode, pss_verify): Use VALUE verbatim for MHASH.
	(octet_string_from_mpi): Add arg SPACE.

2011-06-08  Werner Koch  <wk@g10code.com>

	* pubkey.c (pss_encode, pss_verify): Restructure and comment code
	to match rfc-3447.  Replace secure allocs by plain allocs and
	wipememory.  Use gcry_md_hash_buffer.
	(octet_string_from_mpi): New.

2011-06-03  Werner Koch  <wk@g10code.com>

	* pubkey.c (oaep_decode): Add more comments and restructure to
	match the description in RFC-3447.
	(oaep_encode): Check for mgf1 error.  s/dlen/hlen/.

2011-05-31  Werner Koch  <wk@g10code.com>

	* pubkey.c (mgf1): Optimize by using gcry_md_reset.  Re-implement
	for easier readability.
	(oaep_encode): Add more comments and restructure to match the
	description in RFC-3447.

	* pubkey.c (pkcs1_encode_for_signature, oaep_decode): Change
	return value from one MPI to a buffer.
	(gcry_pk_decrypt): Adjust for this change.

2011-05-30  Werner Koch  <wk@g10code.com>
